# pico

./: .gitignore  CITATION.cff  LICENSE  README.md  experiments.ipynb  pico.py  picolm.py  pyproject.toml  wikitext.py
pico/: __main__.py  infer.py  model.py  train.py  utils.py
src/pico/: cli.py  infer.py  model.py  serialization.py  train.py
