[project]
name = "pico"
version = "0.1.0"
description = "Pico is a tiny byte generation model."
readme = "README.md"
authors = [
    { name = "loristns", email = "11007033+loristns@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.0.1",
    "datasets>=3.0.2",
    "einops>=0.8.0",
    "flash-attn",
    "pydantic>=2.9.2",
    "safetensors>=0.4.5",
    "setuptools>=75.3.0",
    "torch>=2.5.1",
    "triton>=3.0.0",
    "typer>=0.12.5",
    "wandb>=0.18.6",
]

[project.scripts]
picolm = "pico.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121" },
]
flash-attn = { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.6.3/flash_attn-2.6.3+cu123torch2.4cxx11abiFALSE-cp311-cp311-linux_x86_64.whl" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
