[project]
name = "pico"
version = "0.1.0"
description = "Pico is a tiny byte generation model."
readme = "README.md"
authors = [
    { name = "loristns", email = "11007033+loristns@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.3.0",
    "datasets>=3.0.2",
    "einops>=0.8.0",
    "flash-attn",
    "pydantic>=2.10.6",
    "safetensors>=0.5.2",
    "setuptools>=75.8.0",
    "torch>=2.5.1",
    "triton>=3.0.0",
    "typer>=0.12.5",
    "wandb>=0.19.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121" },
]
flash-attn = { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.7.3/flash_attn-2.7.3+cu12torch2.5cxx11abiFALSE-cp312-cp312-linux_x86_64.whl" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[dependency-groups]
dev = [
    "ruff>=0.9.3",
]
